--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: List repository files
-      run: ls -R
-
-    - name: Verify tests directory
-      run: ls tests
-
     - name: Run unit tests
-      run: pytest
+      run: pytest tests/
       env:
         PYTHONPATH: ${{ github.workspace }}
 
