--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run unit tests
-      run: pytest tests
+      run: pytest /skills1-introduction-to-github/.github/tests
       env:
         PYTHONPATH: ${{ github.workspace }}
 
