--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run unit test
-      run: pytest test
+    - name: Run unit tests
+      run: pytest tests
       env:
         PYTHONPATH: ${{ github.workspace }}
 
